scroll to top button

--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -142,3 +142,12 @@ height: 75%;
 width: 75%;
 }
 
+#scrollButton{
+    margin-left: 2%;
+}
+
+.facilityBtmText{
+margin-left: 1%;
+margin-bottom: 5px;
+}
+
